// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/File Field Default 1`] = `
<div>
  <label
    className=""
  >
    Foto Mustahik
  </label>
  <label
    className="desc"
  >
    Unggah foto ukuran 300 x 300 milik mustahik dengan format .jpg
  </label>
  <input
    className="file-input"
    onChange={[Function]}
    type="file"
  />
  <style
    jsx={true}
  >
    
    label {
      text-rendering: geometricPrecision;
      font-family: Muli;
      font-weight: 700;
      font-size: 16px;
      display: block;
      color: #393F50;
    }

    .required:after {
      color: #EB4E2C;
      content: "*";
    }

    .desc {
      display: inline;
      font-weight: normal;
      font-size: 14px;
      line-height: 18px;
      color: #6F6F6F;
      margin-right: 50px;
    }

    .file-input {
      color: transparent;
    }

    .file-input::-webkit-file-upload-button {
      visibility: hidden;
    }

    .file-input::before {
      content: "Pilih Foto";
      font-family: Muli;
      font-size: 16px;
      font-weight: 700;
      color: #00239D;
      cursor: pointer;
      padding: 10px 41px 11px 40px;
      border: 1px solid #00239D;
      border-radius: 50px;
      display: inline-block;
    }

    .error {
      font-family: Muli;
      font-weight: 700;
      font-size: 12px;
      display: block;
      color: #EB4E2C;
      text-rendering: optimizeLegibility;
    }
  
  </style>
</div>
`;

exports[`Storyshots Input/File Field Error 1`] = `
<div>
  <label
    className=""
  >
    Foto Mustahik
  </label>
  <label
    className="desc"
  >
    Unggah foto ukuran 300 x 300 milik mustahik dengan format .jpg
  </label>
  <input
    className="file-input"
    onChange={[Function]}
    type="file"
  />
  <style
    jsx={true}
  >
    
    label {
      text-rendering: geometricPrecision;
      font-family: Muli;
      font-weight: 700;
      font-size: 16px;
      display: block;
      color: #393F50;
    }

    .required:after {
      color: #EB4E2C;
      content: "*";
    }

    .desc {
      display: inline;
      font-weight: normal;
      font-size: 14px;
      line-height: 18px;
      color: #6F6F6F;
      margin-right: 50px;
    }

    .file-input {
      color: transparent;
    }

    .file-input::-webkit-file-upload-button {
      visibility: hidden;
    }

    .file-input::before {
      content: "Pilih Foto";
      font-family: Muli;
      font-size: 16px;
      font-weight: 700;
      color: #00239D;
      cursor: pointer;
      padding: 10px 41px 11px 40px;
      border: 1px solid #00239D;
      border-radius: 50px;
      display: inline-block;
    }

    .error {
      font-family: Muli;
      font-weight: 700;
      font-size: 12px;
      display: block;
      color: #EB4E2C;
      text-rendering: optimizeLegibility;
    }
  
  </style>
  <span
    className="error"
  >
    Ukuran foto yang diunggah tidak sesuai
  </span>
</div>
`;

exports[`Storyshots Input/File Field Required 1`] = `
<div>
  <label
    className="required"
  >
    Foto Mustahik
  </label>
  <label
    className="desc"
  >
    Unggah foto ukuran 300 x 300 milik mustahik dengan format .jpg
  </label>
  <input
    className="file-input"
    onChange={[Function]}
    type="file"
  />
  <style
    jsx={true}
  >
    
    label {
      text-rendering: geometricPrecision;
      font-family: Muli;
      font-weight: 700;
      font-size: 16px;
      display: block;
      color: #393F50;
    }

    .required:after {
      color: #EB4E2C;
      content: "*";
    }

    .desc {
      display: inline;
      font-weight: normal;
      font-size: 14px;
      line-height: 18px;
      color: #6F6F6F;
      margin-right: 50px;
    }

    .file-input {
      color: transparent;
    }

    .file-input::-webkit-file-upload-button {
      visibility: hidden;
    }

    .file-input::before {
      content: "Pilih Foto";
      font-family: Muli;
      font-size: 16px;
      font-weight: 700;
      color: #00239D;
      cursor: pointer;
      padding: 10px 41px 11px 40px;
      border: 1px solid #00239D;
      border-radius: 50px;
      display: inline-block;
    }

    .error {
      font-family: Muli;
      font-weight: 700;
      font-size: 12px;
      display: block;
      color: #EB4E2C;
      text-rendering: optimizeLegibility;
    }
  
  </style>
</div>
`;
